1.0.8 2012-02-07 22:30:00
  - Adds 'provides' method to generate a CPAN META provides data structure
    correctly; use of package_versions_from_directory is discouraged (DAGOLDEN)

1.0.7 2011-09-07 12:00:00
  - Apply VMS fixes backported from blead (Craig A. Berry)

1.0.6 2011-08-29 04:00:00
  - Support PACKAGE BLOCK syntax (VPIT)

1.0.5 2011-08-02 09:45:00
  - Localize $package::VERSION during version discovery (MIYAGAWA)
  - Fix references to Module::Build::ModuleInfo [RT #66133] (DAGOLDEN)
  - Added 'new_from_handle()' method [RT #68875] (DAGOLDEN)
  - Improved documentation (SYNOPSIS, broke out class/object method, and
    other minor edits) (DAGOLDEN)

1.0.4 2011-02-03 07:55:00
  - Fix broken metadata.t when @INC has relative paths (JJORE)

1.0.3 2011-01-06 21:35:00
  - Pod cleanup (DAGOLDEN)

1.0.2 2010-12-10 12:00:00
  - Remove Module::Metadata::Version and depend directly on version.pm
    (DAGOLDEN)
  - Munge versions that fail even "lax" version number rules to try
    to return something sensible (DAGOLDEN)

1.0.1 2010-07-09 00:52:37
  - fix build code to prevent Author.PL being mistakenly run during make
    and add some extra author-side tools (MSTROUT)

1.0.0 2010-07-07
  - Initial release (MSTROUT)
  - Code extracted from Module::Build + Module::Build::Version (MSTROUT)
  - Tests extracted from Module::Build (DAGOLDEN)
  - POD coverage (MSTROUT)
  - Use of Log::Contextual when loaded with fallback to warn() (MSTROUT)